Fri Jan 24 10:05:58 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Module.cpp:
          Initialize pointer member with 0, fixes Coverity error

Fri Jan 24 08:57:01 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Compression/rle/RLECompressor.cpp:
          Fix bug on a boundary condition where 128 bytes of exactly the same
          character (ie 0x00) where that is the end of the compressor input
          fails to produce the correct output. Thanks to Derek Dominish
          <derek dot dominish at dsto dot defence dot gov dot au> for this fix

Thu Jan 23 19:28:22 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * THANKS:
          Added Colin Shen to the list.

Wed Jan 22 08:36:43 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/coverity_model.cpp:
          Coverity model file

Sat Jan 18 18:38:50 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/ace/INet/HTTPS_Context.cpp:
          Copy constructor is declared private so that it can't be used,
          no need for an implementation, resolves Coverity error

Fri Jan 17 10:11:41 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/JAWS/server/HTTP_Server.cpp:
          Added missing break

Thu Jan 16 10:36:20 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/High_Res_Timer.cpp:
          Fixed implementation of ACE_High_Res_Timer::global_scale_factor,
          only set the global_scale_factor_status_ when it is zero and we
          have the lock.

Thu Jan  9 12:33:11 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ace.doxygen:
        * etc/ace_inet.doxygen:
        * etc/ace_qos.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/acexml.doxygen:
          Upgraded to doxygen 1.8.6

Thu Jan  9 10:26:46 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Prepare for next release
