@@ -220,7 +220,7 @@ if ($ok) {
     my @lines;
     while($i < $cmdnr) {
         if (defined $ENV{'ACE_TEST_VERBOSE'}) {
-            print @cmds[$i]."\n";
+            print STDERR @cmds[$i]."\n";
         }
         if ($t->print (@cmds[$i++])) {
             my $buf = '';
@@ -344,7 +344,7 @@ sub handle_vxtest_file
     if (defined $self->{TARGET} && $self->{TARGET}->SystemLibs()) {
         my @tokens = split(/;/, $self->{TARGET}->SystemLibs());
         foreach my $token (@tokens) {
-            push @$vx_ref, "copy " . $ENV{'ACE_RUN_VX_TGTSVR_ROOT'} . "/lib/" . $token . " .";
+            push @$vx_ref, "copy \"" . $ENV{'ACE_RUN_VX_TGTSVR_ROOT'} . "/lib/" . $token . "\" .";
         }
     }
     if (!$PerlACE::Static) {
@@ -354,7 +354,7 @@ sub handle_vxtest_file
             while(<$fh>) {
                 $line1 = $_;
                 chomp $line1;
-                push @$vx_ref, "copy " . $ENV{'ACE_RUN_VX_TGTSVR_ROOT'} . "/lib/$line1" . "d.dll .";
+                push @$vx_ref, "copy \"" . $ENV{'ACE_RUN_VX_TGTSVR_ROOT'} . "/lib/$line1" . "d.dll\" .";
                 unshift @$unld_ref, "del $line1" . "d.dll";
             }
             close $fh;
